--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -19,6 +19,7 @@
 @media screen and (max-width:475px) {
   .lead__subtitle {
     max-width: 288px;
+    line-height: 20px;
     margin: 0 auto 40px;
   }
 }
